--- a/resources/newProject.css
+++ b/resources/newProject.css
@@ -50,7 +50,7 @@ section {
   line-height: 35px;
   border-bottom: 5px solid transparent;
   display: inline-block;
-  cursor: pointer;
+ 
 }
 
 .row .type span.on,
@@ -63,7 +63,7 @@ section {
   overflow-x: hidden;
   width: 710px;
   height: 350px;
-  cursor: pointer;
+  
   border: 1px solid #75757540;
   background-color: #75757552;
 }
@@ -86,12 +86,15 @@ section {
   text-align: center;
   margin: 0 auto;
   display: inline-block;
+
 }
 .row .single .template .img img {
   width: 100%;
   height: 100%;
   display: inline-block;
   vertical-align: middle;
+  cursor: pointer;
+  border-radius: 10px;
 }
 .row .single .template h6 {
   font-size: 12px;
@@ -102,16 +105,17 @@ section {
   line-height: 24px;
   text-align: center;
   position: absolute;
+  cursor: pointer;
 }
 
 .row .single .template.on,
 .row .single .template:hover {
-  border: 2px solid #4977ce;
+  border: 2px solid rgb(12, 74, 189);
 }
 
 .row .single .template.on h6,
 .row .single .template:hover h6 {
-  background-color: #4977ce;
+  background-color: rgb(37, 106, 235);
 }
 .row .discription {
   color: darkgray;
@@ -173,35 +177,55 @@ section {
 
 .newBtnWarp {
   text-align: center;
-  margin: 0 auto;
+  margin-top: 10px;
+}
+
+.newBtnWarp .btnBox {
+  margin-left: 0px;
+    background-color: rgb(12, 74, 189);
+    height: 30px;
+    width: 110px;
+    overflow: hidden;
+    display: flex;
 }
 
 
-.newBtnWarp .loading {
+
+.newBtnWarp .btnBox .loading svg,
+.newBtnWarp .btnBox .newicon svg {
+  fill: white;
+}
+.newBtnWarp .btnBox .newicon,
+.newBtnWarp .btnBox .loading {
   display: inline-block;
-  width: 6px;
-  height: 6px;
-  border-radius: 50%;
-  animation: typing 1s linear infinite alternate;
-  margin: 0px auto;
-  position: relative;
+  width: 18px;
+  height: 18px;
+  margin-right: auto;
   left: 10px;
+  z-index: 1;
+  text-align: right;
+  margin-top: 6px;
+  margin-left: 5px;
+}
+ 
+.newBtnWarp .btnBox .loading {
+  display: none;
 }
 
-.newBtnWarp .loading {
-  display: none;
- }
-
-.newbtn {
+.newBtnWarp .btnBox .newbtn {
+  margin-left: auto;
   display: inline-block;
   color: whitesmoke;
-  background-color: cornflowerblue;
+  background-color: transparent;
   border: 0px;
-  padding: 5px 20px;
-  margin-top: 10px;
-  padding-left: 40px;
-  user-select: none;
-  cursor: pointer;
+    user-select: none;
+    text-indent: 0px;
+    text-align: left;
+    width: 90px;
+    padding-left: 5px;
+    cursor: pointer;
+    white-space: nowrap;
+    outline: none;
 }
 .newbtn:hover {
   background-color: rgb(63, 107, 189);
