--- a/resources/newProject.css
+++ b/resources/newProject.css
@@ -4,7 +4,7 @@ body {
 }
 input,
 button {
-  outline-color:#4977ce;
+  outline-color: rgb(0, 122, 204);
 }
 section {
   /* margin: 0px auto; */
@@ -36,26 +36,24 @@ section {
 
 .row .type {
   max-width: 800px;
-  height: 40px;
   border: none;
   user-select: none;
-  line-height: 40px;
   margin-top: 10px;
 }
 
 .row .type span {
   vertical-align: top;
-  padding: 0px 10px;
-  height: 35px;
-  line-height: 35px;
-  border-bottom: 5px solid transparent;
+  padding: 0px 30px;
+  height: 30px;
+  line-height: 30px;
+  border-bottom: 3px solid transparent;
   display: inline-block;
- 
 }
 
 .row .type span.on,
 .row .type span:hover {
-  border-color: #4977ce;
+  border-color: rgb(0, 122, 204);
+  background-color: grey;
 }
 
 .row .single {
@@ -63,9 +61,8 @@ section {
   overflow-x: hidden;
   width: 710px;
   height: 350px;
-  
-  border: 1px solid #75757540;
-  background-color: #75757552;
+  border: 2px solid #75757540;
+  /* background-color: #75757552; */
 }
 
 .row .single .template {
@@ -86,11 +83,11 @@ section {
   text-align: center;
   margin: 0 auto;
   display: inline-block;
-
 }
 .row .single .template .img img {
-  width: 100%;
-  height: 100%;
+  width: 80%;
+  height: 80%;
+  margin-top: 8%;
   display: inline-block;
   vertical-align: middle;
   cursor: pointer;
@@ -110,18 +107,19 @@ section {
 
 .row .single .template.on,
 .row .single .template:hover {
-  border: 2px solid rgb(12, 74, 189);
+  border: 2px solid rgb(0, 122, 204);
 }
 
 .row .single .template.on h6,
 .row .single .template:hover h6 {
-  background-color: rgb(37, 106, 235);
+  background-color: rgb(0, 122, 204);
 }
 .row .discription {
   color: darkgray;
-    height: 60px;
-    margin-top: 5px;
-    overflow-y: scroll;
+  max-height: 60px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  overflow-y: scroll;
 }
 .row .discription p {
   font-size: 14px;
@@ -182,14 +180,12 @@ section {
 
 .newBtnWarp .btnBox {
   margin-left: 0px;
-    background-color: rgb(12, 74, 189);
-    height: 30px;
-    width: 110px;
-    overflow: hidden;
-    display: flex;
+  background-color: rgb(0, 122, 204);
+  height: 30px;
+  width: 110px;
+  overflow: hidden;
+  display: flex;
 }
-
-
 
 .newBtnWarp .btnBox .loading svg,
 .newBtnWarp .btnBox .newicon svg {
@@ -201,13 +197,12 @@ section {
   width: 18px;
   height: 18px;
   margin-right: auto;
-  left: 10px;
   z-index: 1;
   text-align: right;
   margin-top: 6px;
-  margin-left: 5px;
+  margin-left: 10px;
 }
- 
+
 .newBtnWarp .btnBox .loading {
   display: none;
 }
@@ -218,14 +213,14 @@ section {
   color: whitesmoke;
   background-color: transparent;
   border: 0px;
-    user-select: none;
-    text-indent: 0px;
-    text-align: left;
-    width: 90px;
-    padding-left: 5px;
-    cursor: pointer;
-    white-space: nowrap;
-    outline: none;
+  user-select: none;
+  text-indent: 0px;
+  text-align: center;
+  width: 90px;
+  padding-left: 5px;
+  cursor: pointer;
+  white-space: nowrap;
+  outline: none;
 }
 .newbtn:hover {
   background-color: rgb(63, 107, 189);
@@ -234,23 +229,24 @@ section {
   width: 1em;
   height: 1em;
   vertical-align: -0.15em;
-  fill: currentColor;
+  fill: rgb(0, 122, 204);
   overflow: hidden;
 }
 
-@keyframes typing{
- 0%{
-      background-color: rgba(255,255,255, 1);
-      box-shadow: 12px 0px 0px 0px rgba(255,255,255,0.2), 
-                  24px 0px 0px 0px rgba(255,255,255,0.2);
-    }
-  25%{ 
-      background-color: rgba(255,255,255, 0.4);
-      box-shadow: 12px 0px 0px 0px rgba(255,255,255,2), 
-                  24px 0px 0px 0px rgba(255,255,255,0.2);
+@keyframes typing {
+  0% {
+    background-color: rgba(255, 255, 255, 1);
+    box-shadow: 12px 0px 0px 0px rgba(255, 255, 255, 0.2),
+      24px 0px 0px 0px rgba(255, 255, 255, 0.2);
   }
-  75%{ background-color: rgba(255,255,255, 0.4);
-      box-shadow: 12px 0px 0px 0px rgba(255,255,255,0.2), 
-                  24px 0px 0px 0px rgba(255,255,255,1);
-    }
+  25% {
+    background-color: rgba(255, 255, 255, 0.4);
+    box-shadow: 12px 0px 0px 0px rgba(255, 255, 255, 2),
+      24px 0px 0px 0px rgba(255, 255, 255, 0.2);
+  }
+  75% {
+    background-color: rgba(255, 255, 255, 0.4);
+    box-shadow: 12px 0px 0px 0px rgba(255, 255, 255, 0.2),
+      24px 0px 0px 0px rgba(255, 255, 255, 1);
+  }
 }
