--- a/resources/view/addDevice/view.ejs
+++ b/resources/view/addDevice/view.ejs
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cat Coding ABC</title>
+  <title>Cat Coding</title>
   <link rel="stylesheet" href="<%=elementUiCssUri%>">
 </head>
 
@@ -22,5 +22,5 @@
 </body>
 <script type="text/javascript" src="<%=vueJsUri%>"></script>
 <script type="text/javascript" src="<%=elementUiJsUri%>"></script>
-<script type="text/javascript" src="<%=indexJs%>"></script>
+<script type="text/javascript" src="<%=indexJsUri%>"></script>
 </html>
