--- a/view/addDevice/view.ejs
+++ b/view/addDevice/view.ejs
@@ -19,7 +19,7 @@
           <el-input placeholder="请输入设备名称" v-model="form.devName"></el-input>
         </el-form-item>
         <el-form-item label="设备密码">
-          <el-input placeholder="请输入密码" v-model="form.password" show-password></el-input>
+          <el-input placeholder="请输入密码" v-model="form.pwd" show-password></el-input>
         </el-form-item>
       </el-form>
       <div style="text-align: center;">
