--- a/view/addDevice/view.ejs
+++ b/view/addDevice/view.ejs
@@ -13,13 +13,14 @@
     <div style="width: 50%;margin: auto;margin-top: 20%;">
       <el-form ref="form" :rules="rules" :model="form" label-width="80px">
         <el-form-item label="设备IP" prop="devIp">
-          <el-input :disabled="viewType=='update'" placeholder="请输入设备IP" v-model="form.devIp"></el-input>
+          <el-input :disabled="viewType=='update'" placeholder="请输入设备IP" v-model="form.devIp" @input="inputChange">
+          </el-input>
         </el-form-item>
         <el-form-item label="设备名称" prop="devName">
-          <el-input placeholder="请输入设备名称" v-model="form.devName"></el-input>
+          <el-input placeholder="请输入设备名称" v-model="form.devName" @input="inputChange"></el-input>
         </el-form-item>
         <el-form-item label="设备密码">
-          <el-input placeholder="请输入密码" v-model="form.devPwd" show-password></el-input>
+          <el-input placeholder="请输入密码" v-model="form.devPwd" show-password @input="inputChange"></el-input>
         </el-form-item>
       </el-form>
       <div style="text-align: center;">
