--- a/view/deviceInfo/view.ejs
+++ b/view/deviceInfo/view.ejs
@@ -13,7 +13,7 @@
     <div style="width: 50%;margin: auto;margin-top: 20%;">
       <el-form ref="form" :rules="rules" :model="form" label-width="80px">
         <el-form-item label="设备IP" prop="devIp">
-          <el-input :disabled="viewType=='update'" placeholder="请输入设备IP" v-model="form.devIp" @input="inputChange">
+          <el-input disabled placeholder="请输入设备IP" v-model="form.devIp" @input="inputChange">
           </el-input>
         </el-form-item>
         <el-form-item label="设备名称" prop="devName">
@@ -27,7 +27,8 @@
         </el-form-item>
       </el-form>
       <div style="text-align: center;">
-        <el-button type="primary" style="margin: auto;" @click="onAddDevice">添加设备</el-button>
+        <el-button type="primary" style="margin: auto;" @click="onUpdate">更新设备</el-button>
+        <el-button type="danger" style="margin: auto;" @click="onDelete">删除设备</el-button>
       </div>
     </div>
   </div>
