--- a/view/setConfig/view.ejs
+++ b/view/setConfig/view.ejs
@@ -10,17 +10,20 @@
 
 <body style="background:#eaeaea;">
   <div id="app">
-    <div style="width: 50%;margin: auto;margin-top: 10%;padding:10px 20px">
-      <el-form ref=" form" :model="form" label-width="180px">
-
-        <el-form-item label="build 文件类型" style="border:1px solid #999;">
-          <el-radio v-model="type" label="1">*.zip</el-radio>
-          <el-radio v-model="type" label="2">*.eap</el-radio>
+    <div style="margin: auto;margin-top: 10%;padding:10px 20px">
+      <el-form label-width="180px">
+        <el-form-item label="build 文件类型" style="border:1px solid #999;text-align: center;">
+          <el-radio-group v-model="buildSuffix" @change="selectChange">
+            <el-radio label="zip">*.zip</el-radio>
+            <el-radio label="eap">*.eap</el-radio>
+          </el-radio-group>
         </el-form-item>
 
-        <el-form-item label="版本自增" style="border:1px solid #999;">
-          <el-radio v-model="version" label="1">自增</el-radio>
-          <el-radio v-model="version" label="2">不自增</el-radio>
+        <el-form-item label="版本自增" style="border:1px solid #999;text-align: center;">
+          <el-radio-group v-model="increment" @change="selectChange">
+            <el-radio label="yes">Yes</el-radio>
+            <el-radio label="no">No</el-radio>
+          </el-radio-group>
         </el-form-item>
       </el-form>
     </div>
