--- a/view/deviceInfo/view.ejs
+++ b/view/deviceInfo/view.ejs
@@ -6,29 +6,44 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cat Coding</title>
   <link rel="stylesheet" href="<%=elementUiCssUri%>">
+  <script type="text/javascript">
+    let ipNotEmptyText = "<%=language.ipNotEmptyText%>";
+    let ipExistText = "<%=language.ipExistText%>";
+    let ipIncorrectFormatText = "<%=language.ipIncorrectFormatText%>";
+    let devNameNotEmptyText = "<%=language.devNameNotEmptyText%>";
+    let devNameExistText = "<%=language.devNameExistText%>";
+    let devDeleteHintTitleText = "<%=language.devDeleteHintTitleText%>";
+    let devDeleteHintContextText = "<%=language.devDeleteHintContextText%>";
+    let devDeleteHintYesButtonText = "<%=language.devDeleteHintYesButtonText%>";
+    let devDeleteHintNoButtonText = "<%=language.devDeleteHintNoButtonText%>";
+  </script>
 </head>
 
 <body style="background:#eaeaea;">
   <div id="app">
     <div style="width: 50%;margin: auto;margin-top: 10%;">
-      <el-form ref="form" :rules="rules" :model="form" label-width="80px">
-        <el-form-item label="设备IP" prop="devIp">
-          <el-input disabled placeholder="请输入设备IP" v-model="form.devIp" @input="inputChange">
+      <el-form ref="form" :rules="rules" :model="form" label-width="180px">
+        <el-form-item label="<%=language.devIpTxt%>" prop="devIp">
+          <el-input disabled placeholder="" v-model="form.devIp" @input="inputChange">
           </el-input>
         </el-form-item>
-        <el-form-item label="设备名称" prop="devName">
-          <el-input placeholder="请输入设备名称" v-model="form.devName" @input="inputChange"></el-input>
+        <el-form-item label="<%=language.devNameTxt%>" prop="devName">
+          <el-input placeholder="" v-model="form.devName" @input="inputChange"></el-input>
         </el-form-item>
-        <el-form-item label="开发密码">
-          <el-input placeholder="请输入密码" v-model="form.devPwd" show-password @input="inputChange"></el-input>
+        <el-form-item label="<%=language.devPwdTxt%>">
+          <el-input placeholder="" v-model="form.devPwd" show-password @input="inputChange"></el-input>
         </el-form-item>
-        <el-form-item label="登录密码">
-          <el-input placeholder="设备登录密码" v-model="form.devLoginPwd" show-password @input="inputChange"></el-input>
+        <el-form-item label="<%=language.devLoginPwdText%>">
+          <el-input placeholder="" v-model="form.devLoginPwd" show-password @input="inputChange"></el-input>
         </el-form-item>
       </el-form>
       <div style="text-align: center;">
-        <el-button type="primary" style="margin: auto;" @click="onUpdate">更新设备</el-button>
-        <el-button type="danger" style="margin: auto;" @click="onDelete">删除设备</el-button>
+        <el-button type="primary" style="margin: auto;" @click="onUpdate">
+          <%=language.devUpdate%>
+        </el-button>
+        <el-button type="danger" style="margin: auto;" @click="onDelete">
+          <%=language.devDelete%>
+        </el-button>
       </div>
     </div>
   </div>
@@ -36,4 +51,5 @@
 <script type="text/javascript" src="<%=vueJsUri%>"></script>
 <script type="text/javascript" src="<%=elementUiJsUri%>"></script>
 <script type="text/javascript" src="<%=indexJsUri%>"></script>
+
 </html>
