--- a/view/createProject/view.ejs
+++ b/view/createProject/view.ejs
@@ -73,7 +73,7 @@
             </el-checkbox-group>
           </el-form-item>
           <el-form-item>
-            <el-button type="primary" @click="onSubmit">
+            <el-button type="primary" @click="onSubmit" :loading="loading">
               <%=language.createButtonTxt%>
             </el-button>
           </el-form-item>
