--- a/view/createProject/view.ejs
+++ b/view/createProject/view.ejs
@@ -51,13 +51,13 @@
             <el-input v-model="form.version" @input="inputChange"></el-input>
           </el-form-item>
           <el-form-item label="<%=language.vendorIdTxt%>" prop="vendorId">
-            <el-input v-model="form.vendorId" @input="inputChange" placeholder="required when publish"></el-input>
+            <el-input v-model="form.vendorId" @input="inputChange" placeholder="10001"></el-input>
           </el-form-item>
           <el-form-item label="<%=language.vendorNameTxt%>" prop="vendorName">
-            <el-input v-model="form.vendorName" @input="inputChange" placeholder="required when publish"></el-input>
+            <el-input v-model="form.vendorName" @input="inputChange" placeholder="Username"></el-input>
           </el-form-item>
           <el-form-item label="<%=language.vendorEmailTxt%>" prop="vendorEmail">
-            <el-input v-model="form.vendorEmail" @input="inputChange" placeholder="required when publish"></el-input>
+            <el-input v-model="form.vendorEmail" @input="inputChange" placeholder="Example@acoinfo.com"></el-input>
           </el-form-item>
           <el-form-item label="<%=language.vendorPhoneTxt%>" prop="vendorPhone">
             <el-input v-model="form.vendorPhone" @input="inputChange"></el-input>
