--- a/view/addDevice/view.ejs
+++ b/view/addDevice/view.ejs
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cat Coding</title>
   <link rel="stylesheet" href="<%=elementUiCssUri%>">
+  <link rel="stylesheet" href="<%=indexCssUri%>">
   <script type="text/javascript">
     let ipNotEmptyText = "<%=language.ipNotEmptyText%>";
     let ipExistText = "<%=language.ipExistText%>";
@@ -15,7 +16,7 @@
   </script>
 </head>
 
-<body style="background:#eaeaea;">
+<body>
   <div id="app">
     <div style="width: 50%;margin: auto;margin-top: 10%;">
       <el-form ref="form" :rules="rules" :model="form" label-width="180px">
@@ -31,7 +32,7 @@
         </el-form-item>
       </el-form>
       <div style="text-align: center;">
-        <el-button type="primary" style="margin: auto;" @click="onAddDevice">
+        <el-button type="info" style="margin: auto;" @click="onAddDevice">
           <%=language.addDeviceText%>
         </el-button>
       </div>
